syntax = "proto3";

package driver;



enum VehicleType {
  MOTOBIKE = 0;
  BIKE = 1;
}

enum DriverStatus {
  OFFLINE = 0;
  ONLINE = 1;
  BUSY = 2;
}

message DriverProfileResponse {
  string userId = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string vehicleType = 5;
  string licensePlate = 6;
  string licenseNumber = 7;
  string status = 8;
  double rating = 9;
  double balance = 10;
  double lastLat = 11;
  double lastLng = 12;
}

message CreateDriverRequest {
  string userId = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  VehicleType vehicleType = 5;
  string licensePlate = 6;
  string licenseNumber = 7;
}

message GetDriverRequest {
  string userId = 1;
}

service DriverService {
  rpc CreateDriver(CreateDriverRequest) returns (DriverProfileResponse);
  rpc GetDriver(GetDriverRequest) returns (DriverProfileResponse);

  rpc UpdateLocation(UpdateLocationRequest) returns (DriverProfileResponse);
  rpc UpdateStatus(UpdateStatusRequest) returns (DriverProfileResponse);

  rpc SearchNearbyDrivers(NearbyQuery) returns (NearbyDriverResponse);
}

// search
message NearbyQuery {
  double latitude = 1;
  double longitude = 2;
  double radiusKm = 3;
  int32 count = 4;
}

message NearbyDriver {
  string driverId = 1;
  double distance = 2;
}

message NearbyDriverResponse {
  repeated NearbyDriver list = 1;
}


message UpdateLocationRequest {
  string driverId = 1;
  double latitude = 2;
  double longitude = 3;
}

message UpdateStatusRequest {
  string driverId = 1;
  DriverStatus status = 2;
}


message EmptyResponse {}
